tests/snapshots/integration__integration_tests__help__help_beta.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - beta
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt beta - Experimental commands
Usage: [1m[36mwt beta[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mselect[0m      Interactive worktree selector
  [1m[36mstatusline[0m  Single-line status for shell prompts

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m  Print help

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m        Show commands and debug info
