tests/snapshots/integration__integration_tests__help__help_config_approvals.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - approvals
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config approvals - Manage command approvals
Usage: [1m[36mwt config approvals[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36madd[0m    Store approvals in config
  [1m[36mclear[0m  Clear approved commands from config

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

[32mHow Approvals Work[0m

Commands from project hooks (.config/wt.toml) and LLM configuration require
approval on first run. This prevents untrusted projects from running arbitrary
commands.

[1mApproval flow:[0m
1. Command is shown with expanded template variables
2. User approves or denies
3. Approved commands are saved to user config under [2m[projects."project-id"][0m

[1mWhen re-approval is required:[0m
- Command template changes (not just variable values)
- Project ID changes (repository moves)

[1mBypassing prompts:[0m
- [2m--force[0m flag on individual commands (e.g., [2mwt merge --force[0m)
- Useful for CI/automation where prompts aren't possible

[32mExamples[0m

Pre-approve all commands for current project:
  [2mwt config approvals add[0m

Clear approvals for current project:
  [2mwt config approvals clear[0m

Clear global approvals:
  [2mwt config approvals clear --global[0m
