tests/snapshots/integration__integration_tests__help__help_config_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage configuration and shell integration
Usage: [1m[36mwt config[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mshell[0m      Shell integration setup
  [1m[36mcreate[0m     Create user configuration file
  [1m[36mshow[0m       Show configuration files & locations
  [1m[36mcache[0m      Manage caches (CI status, default branch)
  [1m[36mstatus[0m     Manage branch status markers
  [1m[36mapprovals[0m  Manage command approvals

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

[32mSetup Guide[0m

1. Set up shell integration

  [2m   wt config shell install[0m

   Or manually add to the shell config:

  [2m   eval "$(wt config shell init bash)"[0m

2. (Optional) Create user config file

  [2m   wt config create[0m

   This creates [2m~/.config/worktrunk/config.toml[0m with examples.

3. (Optional) Enable LLM commit messages

   Install: [2muv tool install -U llm[0m
   Configure: [2mllm keys set anthropic[0m
   Add to user config:

  [2m   [commit-generation][0m
  [2m   command = "llm"[0m

[32mLLM Setup Details[0m

For Claude:

  [2mllm install llm-anthropic[0m
  [2mllm keys set anthropic[0m
  [2mllm models default claude-haiku-4-5-20251001[0m

For OpenAI:

  [2mllm keys set openai[0m

Use [2mwt config show[0m to view the current configuration.
Docs: <https://llm.datasette.io/> | <https://github.com/sigoden/aichat>

[32mConfiguration Files[0m

[1mUser config[0m:

- Location: [2m~/.config/worktrunk/config.toml[0m (or [2mWORKTRUNK_CONFIG_PATH[0m)
- Run [2mwt config create --help[0m to view documented examples

[1mProject config[0m:

- Location: [2m.config/wt.toml[0m in repository root
- Contains: post-create, post-start, pre-commit, pre-merge, post-merge hooks
