tests/snapshots/integration__integration_tests__help__help_config_status_set.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - status
    - set
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config status set - Set status emoji for branch
Usage: [1m[36mwt config status set[0m [36m[OPTIONS][0m [36m<VALUE>[0m

[1m[32mArguments:[0m
  [36m<VALUE>[0m
          Status emoji to display

[1m[32mOptions:[0m
      [1m[36m--branch[0m[36m [0m[36m<BRANCH>[0m
          Target branch (defaults to current)

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Sets a custom status marker that appears in [2mwt list[0m output.

Use emojis or short text to indicate work state (e.g., 🚧 WIP, ✅ ready, 🔒 blocked).
Stored in git config under [2mworktrunk.status.<branch>[0m.
